Fixed responsiveness on mobile

--- a/index.css
+++ b/index.css
@@ -115,10 +115,10 @@ main {
 
 @media screen and (max-width: 375px) {
   .main-section {
-    width: 80%;
+    width: 100%;
   }
   .container {
-    width: 60%;
+    width: 75%;
     padding: 1.5rem;
     margin-bottom: 2em;
   }
